--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#6F6FDB</color>
     <color name="colorPrimaryDark">#29295A</color>
-    <color name="colorAccent">#6F6FDB</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="dialogColor">#9C9CE0</color>
 </resources>
