--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,5 +22,5 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorWhite">#B7E1F5FE</color>
 </resources>
