--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,40 +8,25 @@
     android:background="@drawable/gradient"
     android:isScrollContainer="true"
     tools:context=".SignUpActivity">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-    <TextView
-        android:id="@+id/signUp_signUpText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/signUp"
-        android:textColor="@android:color/background_light"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/signUp_userProfileImageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/signUp_userProfileImageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="56dp"
-            android:layout_marginLeft="56dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="56dp"
-            android:layout_marginRight="56dp"
-            android:contentDescription="@string/profileImage"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_signUpText"
-            app:srcCompat="@android:drawable/sym_def_app_icon"
-            tools:srcCompat="@tools:sample/avatars" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/signUp_signUpButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/rounded_button"
+            android:text="@string/signUp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/signUp_genderRadioGroup"
+            app:layout_constraintStart_toStartOf="@+id/signUp_genderRadioGroup"
+            app:layout_constraintTop_toBottomOf="@+id/signUp_genderRadioGroup" />
 
         <EditText
             android:id="@+id/signUp_firstNameEditText"
@@ -132,27 +117,33 @@
             app:layout_constraintStart_toStartOf="@+id/signUp_confirmPasswordEditText"
             app:layout_constraintTop_toBottomOf="@+id/signUp_confirmPasswordEditText" />
 
-        <TextView
-            android:id="@+id/signUp_genderTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="@string/gender"
-            android:textColor="@android:color/background_light"
-            android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="@+id/signUp_cityEditText"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_cityEditText" />
+        <ImageView
+            android:id="@+id/signUp_userProfileImageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="56dp"
+            android:layout_marginRight="56dp"
+            android:contentDescription="@string/profileImage"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/signUp_signUpText"
+            app:srcCompat="@android:drawable/sym_def_app_icon"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <RadioGroup
             android:id="@+id/signUp_genderRadioGroup"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:checkedButton="@+id/signUp_maleRadioButton"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="@+id/signUp_cityEditText"
             app:layout_constraintStart_toStartOf="@+id/signUp_genderTextView"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_genderTextView"
-            android:checkedButton="@+id/signUp_maleRadioButton">
+            app:layout_constraintTop_toBottomOf="@+id/signUp_genderTextView">
 
             <RadioButton
                 android:id="@+id/signUp_maleRadioButton"
@@ -173,18 +164,31 @@
                 android:textColor="@android:color/background_light" />
         </RadioGroup>
 
-        <Button
-            android:id="@+id/signUp_signUpButton"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/signUp_signUpText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/signUp"
+            android:textColor="@android:color/background_light"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/signUp_userProfileImageView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/signUp_genderTextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/rounded_button"
-            android:text="@string/signUp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/signUp_genderRadioGroup"
-            app:layout_constraintStart_toStartOf="@+id/signUp_genderRadioGroup"
-            app:layout_constraintTop_toBottomOf="@+id/signUp_genderRadioGroup" />
+            android:text="@string/gender"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/signUp_cityEditText"
+            app:layout_constraintTop_toBottomOf="@+id/signUp_cityEditText" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
