--- a/app/src/main/res/layout/fragment_contacts_item.xml
+++ b/app/src/main/res/layout/fragment_contacts_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/fragment_contacts_item_userImage"
         android:layout_width="0dp"
         android:layout_height="75dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:contentDescription="User Profile Image"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
@@ -22,4 +22,11 @@
         android:layout_weight="5"
         android:gravity="start|center_vertical"
         android:paddingLeft="10dp" />
+
+    <ImageView
+        android:id="@+id/fragment_contacts_item_isOnlineButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        app:srcCompat="@android:drawable/presence_online" />
 </LinearLayout>
