--- a/app/src/main/res/layout/fragment_groups_item.xml
+++ b/app/src/main/res/layout/fragment_groups_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_groups_item_linerLayout"
     android:layout_width="match_parent"
     android:layout_height="75dp"
@@ -33,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:visibility="gone"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <ImageButton
@@ -40,6 +42,15 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:visibility="gone"
         app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <ImageButton
+        android:id="@+id/fragment_groups_item_leaveButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone"
+        app:srcCompat="@drawable/ic_leave_group" />
 
 </LinearLayout>
