profile image changes done

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,10 +7,10 @@
 
     <ImageView
         android:id="@+id/profile_imageView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="125dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="125dp"
         android:contentDescription="@string/profileImage"
         app:layout_constraintEnd_toEndOf="parent"
