--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
 
         <EditText
             android:id="@+id/main_passwordEditText"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:ems="10"
@@ -36,15 +36,17 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:textColor="@android:color/background_light"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/main_emailEditText"
+            app:layout_constraintStart_toStartOf="@+id/main_emailEditText"
             app:layout_constraintTop_toBottomOf="@+id/main_emailEditText" />
 
         <EditText
             android:id="@+id/main_emailEditText"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="56dp"
             android:layout_marginTop="64dp"
+            android:layout_marginEnd="56dp"
             android:ems="10"
             android:hint="@string/emailID"
             android:importantForAutofill="no"
@@ -81,7 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="176dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="178dp"
             android:text="@string/signUp"
             android:textColor="@android:color/background_light"
