--- a/app/src/main/res/layout/fragment_groups_item.xml
+++ b/app/src/main/res/layout/fragment_groups_item.xml
@@ -14,14 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:background="@null"
         android:contentDescription="@string/add"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fragment_groups_item_texxtViewLinearLayout"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_add"
-        android:background="@null"/>
+        app:srcCompat="@drawable/ic_add" />
 
     <ImageButton
         android:id="@+id/fragment_groups_item_deleteButton"
@@ -42,21 +42,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:background="@null"
         android:contentDescription="@string/remove"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fragment_groups_item_texxtViewLinearLayout"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_remove"
-        android:background="@null" />
+        app:srcCompat="@drawable/ic_remove" />
 
     <LinearLayout
         android:id="@+id/fragment_groups_item_texxtViewLinearLayout"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="48dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
